# opengl-skyscraper-3d

./: .gitignore  CMakeLists.txt  README.md  combined.txt
shaders/: basic.frag  basic.vert  text.frag  text.vert
src/: Application.cpp  Application.h  camera.cpp  camera.h  main.cpp  mesh.cpp  mesh.h  mesh_factory.cpp  mesh_factory.h  model.cpp  model.h  scene_node.cpp  scene_node.h  shader.cpp  shader.h  signature_renderer.cpp  signature_renderer.h  stb_image_wrapper.cpp  transform.cpp  transform.h
